
--- Thursday 2012-07-12 ---
* Sector layers that contain no tiles, and never will (certain layers are empty
  most of the time, untill an object walks over them) will not be drawn.
  This saves us a lot of sector draws.

--- Friday 2012-07-06 ---
* If a sector has been checked for dirty tiles,
  and none have been found, skip the second iteration.
* Added a few debug options. Also fixed the cleaning up of padding
  (basic implementation, though)
* Started work on creating a single canvas PER map layer, this should simplify
  the code and increase the framerate even more.
* Implementation is already working, but in a simple, drop-in kind of way.
  (No optimization whatsoever)

--- Saturday 2012-06-30 ---
* Made the new debug function produce more data, like caller info and line nr
* We've got non-fluid objects back, but there are certain artefacts popping up
  here and there. And the head gets cut off sometimes:
  need to add sector padding!
* Artefacts have been fixed! The getSector function always supplied the coord
  back it was given, but that could have been from INSIDE the sector, so it was
  wrong. Now we have a function that'll give you a sector coord based on the
  sector number alone.
* In order to draw objects over 2 sectors we had to choose for a padding system
  (adding a bit of clear space around sectors) or drawing the object twice.
  After some tests, padding was the best option.
* Also fixed some setSectorFamily problems. Certain layers used to be drawn more
  than others, and that isn't good.
* Fixed smooth walking of objects, but it causes a massive performance hit

--- Friday 2012-06-29 ---
* Modified the drawGrid debug function, the sector lines are now drawn
  correctly and move along with the map.
* Because of the improved drawGrid function, some other hardcoded debug
  code may be removed.
* Plain shadows are drawn again.
* New debug log function, some fixes here and there

--- Thursday 2012-06-28 ---